--- a/TestOS2/bin/AndroidManifest.xml
+++ b/TestOS2/bin/AndroidManifest.xml
@@ -8,8 +8,11 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="21" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-
+   <!--   <uses-permission android:name="android.permission.INJECT_EVENTS"/> -->
+    
+	
     <application
+        android:name="com.iut.oneswitch.control.LinesController"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -19,7 +22,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
