--- a/TestOS2/bin/AndroidManifest.xml
+++ b/TestOS2/bin/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="21" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    
+    <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
    <!--   <uses-permission android:name="android.permission.INJECT_EVENTS"/> -->
     
 	
