--- a/TestOS2/bin/AndroidManifest.xml
+++ b/TestOS2/bin/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <application
         android:name="com.iut.oneswitch.control.LinesController"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon_oneswitch"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
