rev 24/11: 	J'ai rajouté des fonctions, maintenant il détermine la longueur du clique et clique la même durée 			(limite de 2 secondes, car un appuie de 10 secondes est inutile et peut causer des soucis) 			De plus, la ligne s'arrête quand on pose le doigt sur l'écran et plus quand on le soulève, 			pour un maximum de précision 			Premiere idee d'icone
rev 23/11: 	Ajout du bouton Cliquer et Stop, maintenant il est possible
de déterminer exactement le moment 
			ou l'on veut que l'application démarre.
			Les barres se font à l'infini, jusqu'à la séléction de ce bouton Stop
qui arrête le service.
			Debug du code

--- a/TestOS2/AndroidManifest.xml
+++ b/TestOS2/AndroidManifest.xml
@@ -5,11 +5,12 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="15"
+        android:minSdkVersion="16"
         android:targetSdkVersion="21" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     
     <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
+   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
    <!--   <uses-permission android:name="android.permission.INJECT_EVENTS"/> -->
     
 	
@@ -30,6 +31,16 @@
         <service
             android:name="com.iut.oneswitch.model.OneSwitchService"
             android:exported="false"/>
+            <!--
+<receiver android:enabled="true" android:name="com.iut.oneswitch.model.BootUpReceiver"
+        android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
+
+        <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+</receiver>
+        -->
     </application>
 
 </manifest>
