--- a/TestOS2/AndroidManifest.xml
+++ b/TestOS2/AndroidManifest.xml
@@ -15,7 +15,6 @@
     
 	
     <application
-        android:name="com.iut.oneswitch.control.LinesController"
         android:allowBackup="true"
         android:icon="@drawable/icon_oneswitch"
         android:label="@string/app_name"
@@ -29,7 +28,7 @@
             </intent-filter>
         </activity>
         <service
-            android:name="com.iut.oneswitch.model.OneSwitchService"
+            android:name="com.iut.oneswitch.application.OneSwitchService"
             android:exported="false"/>
             <!--
 <receiver android:enabled="true" android:name="com.iut.oneswitch.model.BootUpReceiver"
