--- a/TestOS2/bin/AndroidManifest.xml
+++ b/TestOS2/bin/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.testos2"
+    package="com.example.oneswitch"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -11,7 +11,7 @@
     
     <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-   <!--   <uses-permission android:name="android.permission.INJECT_EVENTS"/> -->
+   <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     
 	
     <application
