--- a/TestOS2/bin/AndroidManifest.xml
+++ b/TestOS2/bin/AndroidManifest.xml
@@ -7,13 +7,12 @@
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="21" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    
-    <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
-   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-   <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-    
-	
+
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon_oneswitch"
@@ -24,13 +23,15 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service
             android:name="com.iut.oneswitch.application.OneSwitchService"
-            android:exported="false"/>
-            <!--
+            android:exported="false" />
+        <!--
 <receiver android:enabled="true" android:name="com.iut.oneswitch.model.BootUpReceiver"
         android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
 
@@ -40,6 +41,10 @@
         </intent-filter>
 </receiver>
         -->
+        <activity
+            android:name="com.iut.oneswitch.view.SettingsOS"
+            android:label="@string/title_activity_settings_os" >
+        </activity>
     </application>
 
 </manifest>
