--- a/TestOS2/AndroidManifest.xml
+++ b/TestOS2/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/icon_oneswitch"
+        android:icon="@drawable/ic_oneswitch"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
