--- a/TestOS2/AndroidManifest.xml
+++ b/TestOS2/AndroidManifest.xml
@@ -36,6 +36,17 @@
             android:name="com.iut.oneswitch.view.SettingsOS"
             android:label="@string/title_activity_settings_os" >
         </activity>
+
+      
+        <receiver
+            android:name="com.iut.oneswitch.application.BootUpReceiver"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter android:priority="500" >
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+       
     </application>
 
 </manifest>
