--- a/OneSwitch/bin/AndroidManifest.xml
+++ b/OneSwitch/bin/AndroidManifest.xml
@@ -19,6 +19,16 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <receiver
+            android:name="com.example.oneswitch.app.BootUpReceiver"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter android:priority="1000">
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name="com.example.oneswitch.app.OneSwitchActivity"
             android:configChanges="orientation|screenSize"
@@ -26,14 +36,15 @@
             android:windowSoftInputMode="stateHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <service
             android:name="com.example.oneswitch.app.OneSwitchService"
-            android:enabled="true"
-            android:configChanges="orientation|screenSize" >
+            android:configChanges="orientation|screenSize"
+            android:enabled="true" >
             <intent-filter>
                 <action android:name="android.intent.action.CONFIGURATION_CHANGED" />
             </intent-filter>
