--- a/OneSwitch/AndroidManifest.xml
+++ b/OneSwitch/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.oneswitch"
+    package="iut.oneswitch"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -21,7 +21,7 @@
         android:theme="@style/AppTheme" >
         
         <receiver
-            android:name="com.example.oneswitch.app.BootUpReceiver"
+            android:name="iut.oneswitch.app.BootUpReceiver"
             android:enabled="true"
             android:exported="true" >
             <intent-filter android:priority="1000">
@@ -30,7 +30,7 @@
         </receiver>
 
         <activity
-            android:name="com.example.oneswitch.app.OneSwitchActivity"
+            android:name="iut.oneswitch.app.OneSwitchActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:windowSoftInputMode="stateHidden" >
@@ -42,7 +42,7 @@
         </activity>
 
         <service
-            android:name="com.example.oneswitch.app.OneSwitchService"
+            android:name="iut.oneswitch.app.OneSwitchService"
             android:configChanges="orientation|screenSize"
             android:enabled="true" >
             <intent-filter>
