--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.margaritov.preference.colorpicker">
 
-    <uses-sdk android:minSdkVersion="7" />
+        <uses-sdk
+        android:minSdkVersion="16"
+        android:targetSdkVersion="21" />
 
 </manifest>
