--- a/OneSwitch/bin/AndroidManifest.xml
+++ b/OneSwitch/bin/AndroidManifest.xml
@@ -13,18 +13,18 @@
     <uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+a
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <receiver
             android:name="iut.oneswitch.app.BootUpReceiver"
             android:enabled="true"
             android:exported="true" >
-            <intent-filter android:priority="1000">
+            <intent-filter android:priority="1000" >
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
