--- a/OneSwitch/AndroidManifest.xml
+++ b/OneSwitch/AndroidManifest.xml
@@ -16,7 +16,9 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-a
+	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+	
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
