--- a/OneSwitch/bin/AndroidManifest.xml
+++ b/OneSwitch/bin/AndroidManifest.xml
@@ -16,16 +16,15 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-	
-	
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <receiver
-            android:name="iut.oneswitch.app.BootUpReceiver"
+            android:name=".app.BootUpReceiver"
             android:enabled="true"
             android:exported="true" >
             <intent-filter android:priority="1000" >
@@ -34,7 +33,7 @@
         </receiver>
 
         <activity
-            android:name="iut.oneswitch.app.OneSwitchActivity"
+            android:name=".app.OneSwitchActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:windowSoftInputMode="stateHidden" >
@@ -46,13 +45,18 @@
         </activity>
 
         <service
-            android:name="iut.oneswitch.app.OneSwitchService"
+            android:name=".app.OneSwitchService"
             android:configChanges="orientation|screenSize"
             android:enabled="true" >
             <intent-filter>
                 <action android:name="android.intent.action.CONFIGURATION_CHANGED" />
             </intent-filter>
         </service>
+
+        <activity
+            android:name="iut.oneswitch.app.AboutActivity"
+            android:label="@string/title_activity_about" >
+        </activity>
     </application>
 
 </manifest>
