--- a/OneSwitch/AndroidManifest.xml
+++ b/OneSwitch/AndroidManifest.xml
@@ -53,6 +53,16 @@
                 <action android:name="android.intent.action.CONFIGURATION_CHANGED" />
             </intent-filter>
         </service>
+        
+        <service android:name=".app.SimpleIME"
+		    android:label="@string/simple_ime"
+		    android:permission="android.permission.BIND_INPUT_METHOD"
+		    >
+		    <meta-data android:name="android.view.im" android:resource="@xml/method"/>
+		    <intent-filter>
+		        <action android:name="android.view.InputMethod" />
+		    </intent-filter>            
+		</service>
 
         <activity
             android:name="iut.oneswitch.app.AboutActivity"
